@@ -16,8 +16,6 @@ export(importance)
 export(predictions)
 export(ranger)
 export(timepoints)
-export(tune.mtry)
-export(tune.nodesize)
 import(stats)
 import(utils)
 importFrom(Rcpp,evalCpp)
